Completion of bananaHollandaise and adding in the image.

--- a/recipes/bananaHollandaise.html
+++ b/recipes/bananaHollandaise.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Banana Hollandaise</h1>
+    <h1>Ham and Bananas Hollandaise</h1>
+    <img src='images/hollandaise.jpg' alt='Ham and Bananas Hollandaise' style="width:600px;height:600px;">
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>Bunch of Bananas</li>
+        <li>Canned Ham</li>
+        <li>4 eggs</li>
+        <li>Cheese</li>
+    </ul>
+    <h2>Steps:</h2>
+    <ol>
+        <li>Peel all the bananas and place them in a lasagna tray.</li>
+        <li>Open can of ham and placed thinly cut strips on top of the bananas.</li>
+        <li>Crack 4 eggs and scramble on medium heat on a skillet.</li>
+        <li>Add cheese to the eggs and remove while still liquid.</li>
+        <li>Do whatever else is required to make a hollandaise sauce from what was done.</li>
+        <li>Pour hollandaise over the bananas and ham and bake at 350 degrees for 15 minutes.</li>
+        <li>Serve and enjoy!</li>
+    </ol>    
 </body>
 </html>
