minor spelling error.

--- a/recipes/turkeyJello.html
+++ b/recipes/turkeyJello.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Ham and Bananas Hollandaise</h1>
-    <img src='images/Turkeyjello.jpg' alt='Turkey Jello Entree' style="width:600px;height:600px;">
+    <img src='images/TurkeyJello.jpg' alt='Turkey Jello Entree' style="width:600px;height:600px;">
     <h2>Ingredients:</h2>
     <ul>
         <li>Fresh canned Turkey</li>
@@ -15,7 +15,7 @@
         <li>Frozen Carrots</li>
         <li>Frozen Peas</li>
         <li>Frozen Spinach</li>
-        <li>>Gravy falvoured Jell-O</li>
+        <li>Gravy falvoured Jell-O</li>
     </ul>
     <h2>Steps:</h2>
     <ol>
