Minor improvements to recipes including adding a back to main recipes list.

--- a/recipes/bananaHollandaise.html
+++ b/recipes/bananaHollandaise.html
@@ -25,5 +25,6 @@
         <li>Pour hollandaise over the bananas and ham and bake at 350 degrees for 15 minutes.</li>
         <li>Serve and enjoy!</li>
     </ol>    
+    <a href="../index.html">Back to Recipe List</a>
 </body>
 </html>
