--- a/recipes/turkeyJello.html
+++ b/recipes/turkeyJello.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ham and Bananas Hollandaise</h1>
+    <h1>Turkey Jell-O Entree</h1>
     <img src='images/TurkeyJello.jpg' alt='Turkey Jello Entree' style="width:600px;height:600px;">
     <h2>Ingredients:</h2>
     <ul>
@@ -25,6 +25,7 @@
         <li>Layer in the carrots at the bottom, followed by the peas, spinach and tuekey.</li>
         <li>Fill the rest of the bowl with the rest of the Jell-O and let rest for 6 hours in the fridge.</li>
         <li>Serve and enjoy!</li>
-    </ol>    
+    </ol>  
+    <a href="../index.html">Back to Recipe List</a>
 </body>
 </html>
