--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin-Recipes</h1>
-    <a href="recipes/bananaHollandaise.html">Lasagna</a>
+    <ul></ul>
+        <li><a href="recipes/bananaHollandaise.html">Ham and Bananas Hollandaise</a></li>
+        <li><a href="recipes/turkeyJello.html">Turkey Jell-O Entree</a></li>
 </body>
 </html>
