Added third recipe to the project.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <ul></ul>
         <li><a href="recipes/bananaHollandaise.html">Ham and Bananas Hollandaise</a></li>
         <li><a href="recipes/turkeyJello.html">Turkey Jell-O Entree</a></li>
+        <li><a href="recipes/celeryVictor.html">Celery Victor</a></li>
 </body>
 </html>
